syntax = "proto3";

package calculator;

option go_package = "./pb";

service Todo {
  rpc NewTodo(TodoRequest) returns (TodoResponse);
  rpc GetTodo(TodoRequest) returns (TodosResponse);
}

message TodoRequest {
  string text = 1;
  string userID = 2;
}

message User {
  string ID = 1;
  string name = 2;
}

message TodoResponse {
  string ID = 1;
  string text = 2;
  bool done = 3;
  string userID = 4;
  User user = 5;
}

message TodosResponse {
  repeated TodoResponse todos = 1;
}